--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "angular-custom-libraries",
-  "version": "0.0.0",
+  "name": "ngx-file-input",
+  "version": "1.0.0",
+  "author": "Stepan Zharychev",
+  "repository": "https://github.com/StepanZharychev/ngx-file-input.git",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint"
   },
@@ -23,6 +25,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1001.7",
     "@angular/cli": "~10.1.2",
     "@angular/compiler-cli": "~10.1.2",
     "@types/node": "^12.11.1",
@@ -36,6 +39,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^10.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
