--- a/projects/ngx-file-input/package.json
+++ b/projects/ngx-file-input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-file-input",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "Stepan Zharychev",
   "license": "ISC",
   "repository": {
@@ -16,11 +16,11 @@
   ],
   "peerDependencies": {
     "@angular/common": "^10.1.6",
-    "@angular/core": "^10.1.6"
+    "@angular/core": "^10.1.6",
+    "@types/filesize-parser": "^1.5.0",
+    "filesize-parser": "^1.5.0"
   },
   "dependencies": {
-    "@types/filesize-parser": "^1.5.0",
-    "filesize-parser": "^1.5.0",
     "tslib": "^2.0.0"
   }
 }
